--- a/header.html
+++ b/header.html
@@ -1,8 +1,9 @@
-<body>
-    <h3>ItzLudvig's Website</h3>
-    <select>
-        <option value="home">Home</option>
-    </select>
-</body>
+<div id="header_background"></div>
+
+<h3 id="mini_title">ItzLudvig's Website</h3>
+
+<select id="page_selector">
+    <option value="home">Home</option>
+</select>
 
 <link rel="stylesheet" href="css/header.css">
