--- a/header.html
+++ b/header.html
@@ -6,4 +6,4 @@
     <option value="home">Home</option>
 </select>
 
-<link rel="stylesheet" href="css/header.css">
+<link rel="stylesheet" href="css/header2.css">
