--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <body>
     <div w3-include-html="header.html"></div>
 
-    <h1 id="title">ItzLudvig's Official Website</h1>
+    <div id="title_div">
+        <h1 id="title_text">ItzLudvig's Official Website</h1>
+    </div>
 
-    <table id="social_media_table">
-        <tr>
-            <td class="social_media_row_item">
-                <a href="https://www.youtube.com/channel/UC56RJQVLCzawg17vt5FXcsg" target="_blank">
-                    <img src="images/youtube.png">
-                </a>
-            </td>
-            <td class="social_media_row_item">
-                <a href="https://www.patreon.com/ItzLudvig" target="_blank">
-                    <img src="images/patreon.png">
-                </a>
-            </td>
-            <td class="social_media_row_item">
-                <a href="https://www.instagram.com/itz_ludvig/" target="_blank">
-                    <img src="images/instagram.png">
-                </a>
-            </td>
-            <td class="social_media_row_item">
-                <a href="https://twitter.com/ItzLudvig" target="_blank">
-                    <img src="images/twitter.png">
-                </a>
-            </td>
-        </tr>
-    </table>
+    <div id="social_media_row">
+        <div class="social_media_row_item">
+            <a href="https://www.youtube.com/channel/UC56RJQVLCzawg17vt5FXcsg" target="_blank">
+                <img src="images/youtube.png">
+            </a>
+        </div>
+        <div class="social_media_row_item">
+            <a href="https://www.patreon.com/ItzLudvig" target="_blank">
+                <img src="images/patreon.png">
+            </a>
+        </div>
+        <div class="social_media_row_item">
+            <a href="https://www.instagram.com/itz_ludvig/" target="_blank">
+                <img src="images/instagram.png">
+            </a>
+        </div>
+        <div class="social_media_row_item">
+            <a href="https://twitter.com/ItzLudvig" target="_blank">
+                <img src="images/twitter.png">
+            </a>
+        </div>
+    </div>
 </body>
 
 <link rel="stylesheet" href="css/index.css">
