--- a/header.html
+++ b/header.html
@@ -2,8 +2,17 @@
 
 <h3 id="mini_title">ItzLudvig's Website</h3>
 
-<select id="page_selector">
-    <option value="home">Home</option>
-</select>
+<div id="pages_row">
+    <div class="pages_row_item">
+        <a href="/">
+            <label>Home</label>
+        </a>
+    </div>
+    <div class="pages_row_item">
+        <a href="/datapacks.html">
+            <label>Datapacks</label>
+        </a>
+    </div>
+</div>
 
 <link rel="stylesheet" href="css/header.css">
