--- a/datapacks.html
+++ b/datapacks.html
@@ -1,7 +1,21 @@
 <body>
     <div w3-include-html="header.html"></div>
 
-    <h1>This page is still under construction, please come back later</h1>
+    <table id="datapacks_table">
+        <tr>
+            <td>
+                <div class="datapack">
+                    <a href="/downloadable/datapacks/life-steal-free-e700.zip" target="_blank">
+                        <img src="images/datapack-covers/sample.png" class="cover_image">
+                        <h2 class="cover_title">Datapack Name</h2>
+                        <label class="cover_text">This is the description of the datapack</label>
+                    </a>
+                </div>
+            </td>
+        </tr>
+    </table>
 </body>
+
+<link rel="stylesheet" href="css/datapacks.css">
 
 <script src="js/html-include.js"></script>
