--- a/datapacks.html
+++ b/datapacks.html
@@ -6,9 +6,9 @@
             <td>
                 <div class="datapack">
                     <a href="/downloadable/datapacks/life-steal-free-e700.zip" target="_blank">
-                        <img src="images/datapack-covers/sample.png" class="cover_image">
-                        <h2 class="cover_title">Datapack Name</h2>
-                        <label class="cover_text">This is the description of the datapack</label>
+                        <img src="images/datapack-covers/lifesteal.png" class="cover_image">
+                        <h2 class="cover_title">Lifesteal</h2>
+                        <label class="cover_text">This datapack adds the lifesteal functionality from the popular lifesteal smp series on youtube.</label>
                     </a>
                 </div>
             </td>
